--- a/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
+++ b/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
@@ -33,16 +33,23 @@
         <div class="col-sm-4">
             <label class="label_style">{{question.fields.questionLabel}}</label>
         </div>
-        <div class="col-sm-8 col-sm-push-2">
-            <div class="col-xs-12" ng-repeat="questionField in question.fields.reponses track by $index">
-                <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
-                                ng-model="don['questions'][question.text][$index]['value']">
-                        <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
-                        <input class="form-control"  type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
-                               ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
-                               ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
-                        <label ng-if="questionField.complement && questionField.libelleApresComplement">{{questionField.libelleApresComplement}}</label>
-            </div>
+        <div class="col-sm-8">
+            <div ng-repeat="questionField in question.fields.reponses track by $index">
+                <div ng-if="!questionField.complement">
+                    <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
+                                    ng-model="don['questions'][question.text][$index]['value']">
+                            <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>                  
+                </div>
+                <div ng-if="questionField.complement" class="col-xs-12">
+                    <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
+                                    ng-model="don['questions'][question.text][$index]['value']">
+                            <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
+                            <input class="form-control"  type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
+                                   ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
+                                   ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
+                            <label ng-if="questionField.complement && questionField.libelleApresComplement">{{questionField.libelleApresComplement}}</label>
+                </div>
+            </div>   
         </div>
     </div>
     
