--- a/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
+++ b/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
@@ -38,7 +38,7 @@
                     <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
                                     ng-model="don['questions'][question.text][$index]['value']">
                             <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
-                            <input type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
+                            <input class=form-control" style="width:auto !important;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
                                    ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
                                    ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
                             <label ng-if="questionField.complement && questionField.libelleApresComplement">{{questionField.libelleApresComplement}}</label>
