--- a/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
+++ b/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
@@ -34,15 +34,15 @@
             <label class="label_style">{{question.fields.questionLabel}}</label>
         </div>
         <div class="col-sm-8">
-            <div ng-repeat="questionField in question.fields.reponses track by $index" class="col-xs-12 display_left" style="display:inline:block !important">
+            <span ng-repeat="questionField in question.fields.reponses track by $index">
                     <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
                                     ng-model="don['questions'][question.text][$index]['value']">
                             <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
-                            <input class="form-control" style="width:40% !important;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
+                            <input class="form-control" style="display:inline-block !important;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
                                    ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
                                    ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
                             <label ng-if="questionField.complement && questionField.libelleApresComplement">{{questionField.libelleApresComplement}}</label>
-                </div>
+                </span>
             </div>   
         </div>
     </div>
