--- a/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
+++ b/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
@@ -35,14 +35,25 @@
         </div>
         <div class="col-sm-8">
             <span ng-repeat="questionField in question.fields.reponses track by $index">
+                <span>
                     <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
                                     ng-model="don['questions'][question.text][$index]['value']">
                             <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
-                            <input class="form-control" style="display:inline-block !important;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
+                            <input class="form-control" style="display:inline-block; width:40%;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
                                    ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
                                    ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
                             <label ng-if="questionField.complement && questionField.libelleApresComplement">{{questionField.libelleApresComplement}}</label>
                 </span>
+                <div ng-if="questionField.complement" class="col-xs-12">
+                    <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
+                                    ng-model="don['questions'][question.text][$index]['value']">
+                            <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
+                            <input class="form-control" style="display:inline-block; width:40%;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
+                                   ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
+                                   ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
+                            <label ng-if="questionField.complement && questionField.libelleApresComplement">{{questionField.libelleApresComplement}}</label>
+                </div>
+            </span>
             </div>   
         </div>
     </div>
