--- a/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
+++ b/theme/foyers/templates/blocks/formulaire/questionsComplementairesFoyers.html
@@ -39,19 +39,15 @@
                     <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
                                     ng-model="don['questions'][question.text][$index]['value']">
                             <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
-                            <input class="form-control" style="display:inline-block; width:40%;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
-                                   ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
-                                   ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
-                            <label ng-if="questionField.complement && questionField.libelleApresPrix">{{questionField.libelleApresPrix}}</label>
                 </span>
                 <div ng-if="questionField.complement" class="col-xs-12">
                     <input type="checkbox"  name="questions_{{$parent.$index}}" id="questions_{{$parent.$index}}_{{$index}}" ng-true-value="{{questionField.titre}}"
                                     ng-model="don['questions'][question.text][$index]['value']">
                             <label class="sexe_label boite" for="questions_{{$parent.$index}}_{{$index}}">{{questionField.titre}}</label>
+                            <label ng-if="questionField.complement && questionField.libelleApresPrix" style="color:white;">{{questionField.libelleApresPrix}}</label>
                             <input class="form-control" style="display:inline-block; width:40%;" type="text" ng-if="questionField.complement" name="questions_{{$parent.$index}}_complement"
                                    ng-model="don['questions'][question.fields.text][$index]['complement']" class="complement_text"
-                                   ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/>
-                            <label ng-if="questionField.complement && questionField.libelleApresPrix">{{questionField.libelleApresPrix}}</label>
+                                   ng-disabled="don['questions'][question.text][$index]['value'] !=questionField.titre"/> 
                 </div>
             </span>
             </div>   
