--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -1,67 +1,66 @@
     <!--NOM-->
     <div class="row">
-        <div class="col-sm-4"><label for="nom" class="label_style">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="nom" ng-model="contactCtrl.contactData.nom" name="name" required></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4"><label for="prenom" class="label_style">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
-        <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="contactCtrl.contactData.surname" name="surname" required></div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-xs-12 col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
-        <div class="col-sm-8">
-            <input type="radio"  name="sexe" id="H" value="H" ng-model="contactCtrl.contactData.sexe.sexe" required>
-                        <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
-            <input type="radio"  name="sexe" id="F" value="F" ng-model="contactCtrl.contactData.sexe.sexe">
-                        <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
+            <div class="col-sm-4"><label for="{{'name'+block.id}}" class="label_style">{{rubedo.translate("Blocks.Contact.Input.Name.Label","Name*")}}</label></div>
+            <div class="col-sm-8"><input type="text" ng-model="contactCtrl.contactData.nom" class="form-control" id="{{'name'+block.id}}" required></div>
         </div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="dateNaiss" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
-        <div class="col-sm-8">
-            <div class="dropdown">
-                <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
-                    <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.birthdate" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.birthdate = (contactCtrl.contactData.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                </ul> 
+        <div class="row">
+            <div class="col-sm-4"><label for="prenom" class="label_style">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
+            <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="contactCtrl.contactData.prenom" name="prenom" required></div>
+        </div>
+        <div class="row" >
+            <div class="col-xs-12 col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
+            <div class="col-sm-8">
+                <input type="radio"  name="sexe" id="H" value="H" ng-model="contactCtrl.contactData.sexe" required>
+                            <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
+                <input type="radio"  name="sexe" id="F" value="F" ng-model="contactCtrl.contactData.sexe">
+                            <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
             </div>
         </div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="villeNaiss" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="contactCtrl.contactData.birthplace" name="birthplace" placeholder="Indiquer aussi le département entre parenthèses" required></div>
-    </div>
-    
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="nationalite" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="contactCtrl.contactData.nationality" name="nationality"></div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" ng-model="contactCtrl.contactData.tel"  required>
+        <div class="row" >
+            <div class="col-sm-4"><label for="dateNaiss" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
+            <div class="col-sm-8">
+                <div class="dropdown">
+                    <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.birthdate" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.birthdate = (contactCtrl.contactData.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul> 
+                </div>
+            </div>
         </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-sm-4"><label for="email" class="label_style">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="email" id="email" name="email"  ng-model="contactCtrl.contactData.email" placeholder="user@mydomain.com" required></div>
-    </div>    
-    <div class="row">
-        <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
-        <div class="col-sm-8">
-            <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="contactCtrl.contactData.email_verif" required>
-            <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
+        <div class="row" >
+            <div class="col-sm-4"><label for="villeNaiss" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="contactCtrl.contactData.birthplace" name="birthplace" placeholder="Indiquer aussi le département entre parenthèses" required></div>
         </div>
-    </div>
+        
+        <div class="row" >
+            <div class="col-sm-4"><label for="nationality" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" id="nationality" ng-model="contactCtrl.contactData.nationality" name="nationality"></div>
+        </div>
+        <div class="row" >
+            <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" ng-model="contactCtrl.contactData.tel"  required>
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col-sm-4"><label for="email" class="label_style">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
+            <div class="col-sm-8"><input class="form-control" type="email" id="email" name="email"  ng-model="contactCtrl.contactData.email" placeholder="user@mydomain.com" required></div>
+        </div> 
+        <!--<div class="row">
+            <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
+            <div class="col-sm-8">
+                <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="contactCtrl.contactData.email_verif" required>
+                <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
+            </div>
+        </div>-->
     
     
 
     
     <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
-    <!--<div class="row" ng-if="!personneConnue"> 
+    <!--<div class="row" > 
         <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
         <div class="col-sm-8"><input type="text" id="tel" name="tel" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="contactCtrl.contactData.tel"  ng-required="isTelephoneRequired()"></div>
     </div>-->
